Bug 1072316 - Proxy release of mLoadInfo in WebSocketChannel dtor (r=jduell)